# A-Demo-for-MLOps

./: README.md
opt-for-onnx/opt/: SVD_plot.py  err_com.py  fused.py  improve.py  insert.py  rank_err.py
opt-for-onnx/test/: accurcy.py  accurcy_org.py  unzip.py
opt-for-onnx/test_data_set_0/: input_0.pb  output_0.pb
server/photo_server/: CMakeLists.txt
server/photo_server/main_server/: CMakeLists.txt  server.cpp
server/photo_server/model/: SimpleCNN.onnx
server/photo_server/src/: batch_infer_engine.cpp  batch_infer_engine.h  main.cpp  ort_infer.cpp  ort_infer.h
